--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "path": "^0.12.7",
     "ws": "^8.19.0",
     "pg": "^8.11.3",
-    "connect-pg-simple": "^9.0.1"
+    "connect-pg-simple": "^9.0.1",
+    "bcrypt": "^5.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
